<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triangles_blue2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230sp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addition"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:layout_marginStart="10sp"
            android:text="@string/addition"
            android:textSize="45sp"
            app:cornerRadius="10sp"
            app:strokeColor="@color/black"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:layout_marginStart="5sp"
            android:text="@string/minus"
            android:textSize="45sp"
            app:cornerRadius="10sp"
            app:strokeColor="@color/black"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:layout_marginStart="5sp"
            android:text="@string/multiply"
            android:textSize="45sp"
            app:cornerRadius="10sp"
            app:strokeColor="@color/black"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:layout_marginStart="5sp"
            android:text="@string/split"
            android:textSize="45sp"
            app:cornerRadius="10sp"
            app:strokeColor="@color/black"
            app:strokeWidth="2sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sign"
        android:layout_width="60sp"
        android:layout_height="50sp"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="400sp"
        android:layout_height="50sp"
        android:layout_marginTop="292dp"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="60sp"
        android:background="#83C9F4FF"
        android:ems="10"
        android:hint="@string/hint_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:strokeWidth="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="60sp"
        android:background="#83C9F4FF"
        android:ems="10"
        android:hint="@string/hint_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:strokeWidth="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.920"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/logo_text"
        android:textAllCaps="true"
        android:textColor="#AEBBFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/go"
        android:layout_width="230sp"
        android:layout_height="100sp"
        android:text="@string/enter"
        android:textSize="45sp"
        app:cornerRadius="10sp"
        app:strokeColor="@color/black"
        app:strokeWidth="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        />

    <Button
        android:id="@+id/showPic"
        android:layout_width="115sp"
        android:layout_height="48sp"
        android:onClick="goToPicActivity"
        android:text="@string/showPic"
        android:textSize="15sp"
        app:cornerRadius="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:strokeColor="@color/black"
        app:strokeWidth="1sp" />

</androidx.constraintlayout.widget.ConstraintLayout>